# BAG

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGES.txt  CMakeLists.txt  CMakeSettings.json  Dockerfile.dev  LICENSE  README.md  appveyor.yml  build-linux.mak  build-win.mak  quickstart.md  readme.rst  readme.txt  requirements-docs.txt  requirements.txt
api/: CMakeLists.txt  Makefile  Makefile_linux  Makefile_win32  bag.cpp  bag.h  bag.pro  bag.sln  bag.vcproj  bag_attr.c  bag_attributeinfo.cpp  bag_attributeinfo.h  bag_c_types.h  bag_compounddatatype.h  bag_compoundlayer.cpp  bag_compoundlayer.h  bag_compoundlayerdescriptor.cpp  bag_compoundlayerdescriptor.h  bag_config.h  bag_crypto.c  bag_dataset.cpp  bag_dataset.h  bag_deleteh5dataset.cpp  bag_deleteh5dataset.h  bag_descriptor.cpp  bag_descriptor.h  bag_epsg.c  bag_errors.h  bag_exceptions.h  bag_fordec.h  bag_georefmetadatalayer.cpp  bag_georefmetadatalayer.h  bag_georefmetadatalayerdescriptor.cpp  bag_georefmetadatalayerdescriptor.h  bag_geotrans.c  bag_hdf.c  bag_hdfhelper.cpp  bag_hdfhelper.h  bag_interleavedlayer.cpp  bag_interleavedlayer.h  (+93 more)
api/interface/: bag_compounddatatype.i  bag_compoundlayer.i  bag_compoundlayerdescriptor.i  bag_dataset.i  bag_descriptor.i  bag_exceptions.i  bag_interleavedlayer.i  bag_interleavedlayerdescriptor.i  bag_layer.i  bag_layerdescriptor.i  bag_metadata.i  bag_metadatatypes.i  bag_simplelayer.i  bag_simplelayerdescriptor.i  bag_surfacecorrections.i  bag_surfacecorrectionsdescriptor.i  bag_trackinglist.i  bag_types.i  bag_uint8array.i  bag_uintarray.i  bag_valuetable.i  std_unique_ptr.i
api/msvc2008/: bag.sln  bag.vcproj
api/swig/: CMakeLists.txt
api/swig_i/: CMakeLists.txt  bag_c_types.i  bag_compounddatatype.i  bag_compoundlayer.i  bag_compoundlayerdescriptor.i  bag_dataset.i  bag_descriptor.i  bag_exceptions.i  bag_interleavedlayer.i  bag_interleavedlayerdescriptor.i  bag_interleavedlegacylayer.i  bag_interleavedlegacylayerdescriptor.i  bag_layer.i  bag_layerdescriptor.i  bag_layeritem.i  bag_layeritems.i  bag_metadata.i  bag_metadata_export.i  bag_metadata_import.i  bag_metadataprofiles.i  bag_metadatatypes.i  bag_simplelayer.i  bag_simplelayerdescriptor.i  bag_surfacecorrections.i  bag_surfacecorrectionsdescriptor.i  bag_trackinglist.i  bag_types.i  bag_uint8array.i  bag_valuetable.i  bag_vrmetadata.i  bag_vrmetadatadescriptor.i  bag_vrnode.i  bag_vrnodedescriptor.i  bag_vrrefinements.i  bag_vrrefinementsdescriptor.i  bag_vrtrackinglist.i  bagpy.i  downcast_shared_ptr.i
docs/: Appendix A.xls  BAGSurfaceCorrectors.doc  BAG_FSD_Draft_1.1.doc  BAG_FSD_Draft_1_0.doc  BAG_FSD_Release_1.0.doc  BAG_FSD_Release_1.5.1.doc  BAG_FSD_Release_1.6.0.doc  BAG_FSD_Release_CR1.1.doc  BUILDING.md  CMakeLists.txt  DigitalSignatureModel_V1.0.doc  Doxyfile.in  LinuxQuickStart.md  QUICKSTART.md  build_instructions.html  requirements-docs.txt
docs/FormatSpecificationDocument/: FSD-BAGStructure.md  FSD-Encapsulation.md  FSD-References.md  Format-Specification-Document.md  RevisionHistory.md
docs/VariableResolution/: 2017-08-10_VariableResolution.docx  VR_BAG_Fig1.ai  VR_BAG_Fig2.ai  VR_BAG_Fig3.ai
docs/api/: conf.py  docs_config.dox  index.rst
docs/doxygen/: docs_config.dox  index.md
docs/old/: BAG_FSD_Release_1.6.2.doc  BAG_FSD_Release_1.6.3.doc  BAG_FSD_Release_CR1.1.doc  Requirements_Text.doc  build_instructions.html  engine_h.html
docs/readthedocs/: build-macos.bash  build.bash  conf.py  environment-macos.yml  environment.yml
docs/sub/: linux.html  mingw.html  visual_studio.html  visual_studio_2008.html  visual_studio_2015.doc  visual_studio_2015.html  visual_studio_2017.html
examples/: CMakeLists.txt  README.md  Readme.txt  appmaster.pro  bag_compound_layer.cpp  bag_compound_layer_create.cpp  bag_compound_layer_read.cpp  bag_create.c  bag_create.cpp  bag_gencert.c  bag_georefmetadata_layer.cpp  bag_read.c  bag_read.cpp  bag_signcert.c  bag_verifycert.c  bag_vr_create.c  bag_vr_create.cpp  bag_vr_read.c  bag_vr_read.cpp  driver.cpp  examples.sln  excertlib.cpp  excertlib.h  extended_fuzzer.cpp  getopt.c  getopt.h  libincludes.pro  libmaster.pro  test_signal_hook.cpp
examples/bagViewer/: BagGL.cpp  BagGL.h  BagIO.cpp  BagIO.h  BagViewer.cpp  BagViewer.h  BagViewer.rc  BagViewer.ui  Bounds.h  CMakeLists.txt  Edge.h  GLCamera.h  GLWindow.cpp  GLWindow.h  fragment.glsl  geometry.glsl  main.cpp  readme.md  resources.qrc  tes.glsl  vertex.glsl
examples/bagcreate/: Makefile  Makefile_linux  Makefile_win32  bagcreate.c  bagcreate.pro  bagcreate.vcproj  build.bat
examples/bagread/: Makefile  Makefile_linux  bagread.c  bagread.pro  bagread.vcproj  build.bat
examples/excertlib/: Makefile_win32  build.bat  excert.pro  excert.vcproj  excertlib.c  getopt.h
examples/gencert/: Makefile_win32  build.bat  example_proto_cert.xml  gencert.pro  gencert.vcproj
examples/python/: bag_compound_layer.py  bag_georefmetadata_layer.py
examples/sample-data/: README.md  Sample_VR_BAG-gzip.bag  bag_compound_layer.bag  bag_georefmetadata_layer.bag  metadata_layer_example.bag  nominal_only.bag  nominal_only.xml  readme.txt  (+5 more)
tests/: CMakeLists.txt  test_bag_compat_vr.cpp  test_bag_compound_layer.cpp  test_bag_compounddatatype.cpp  test_bag_dataset.cpp  test_bag_descriptor.cpp  test_bag_georefmetadata_layer.cpp  test_bag_interleavedlayer.cpp  test_bag_interleavedlayerdescriptor.cpp  test_bag_interleavedlegacylayer.cpp  test_bag_interleavedlegacylayerdescriptor.cpp  test_bag_metadata.cpp  test_bag_record.cpp  test_bag_simplelayer.cpp  test_bag_simplelayerdescriptor.cpp  test_bag_surfacecorrections.cpp  test_bag_surfacecorrectionsdescriptor.cpp  test_bag_trackinglist.cpp  test_bag_valuetable.cpp  test_bag_verticaldatumcorrections.cpp  test_bag_vrmetadata.cpp  test_bag_vrmetadatadescriptor.cpp  test_bag_vrnode.cpp  test_bag_vrnodedescriptor.cpp  test_bag_vrrefinement.cpp  test_bag_vrrefinementdescriptor.cpp  test_bag_vrrefinements.cpp  test_bag_vrrefinementsdescriptor.cpp  test_bag_vrtrackinglist.cpp  test_main.cpp  test_signal_hook.cpp  test_utils.cpp  test_utils.h  test_vr_bag.cpp
(+2370 files in other folders)
